# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),

## [Unreleased]

### Added

- Added new CI/CD build system that allows packaging for Windows, MacOS, and Linux and enaables auto-update @nr0q
- Ported a lot of code from NWJS to Electron - @tag.loomis
- Built the framework files boilerplate, provided lots of good advice @beaugunderson

### Changed

- Animate Active Paths moved from Ctrl-A to Ctrl-J
- Conditions Window Toggle moved from Ctrl-C to Ctrl-E
- Ctrl-A, Ctrl-C, Ctrl-V reserved for Select All, Copy, Paste for text inputs
- Screenshot Ctrl-K writes PNG to appData Screenshots folder, in addition to copy to clipboard
- Fixed Callsign hover "Callsign" in Call Roster
- New Settings -> Features -> CR Wanted+Audio Alerts Band+Mode Memory
- Fixed improper parsing of DL60RRDXA and PC38EUDX callsigns
- Added JTDX installation search if WSJT-X installation not found
- Disabled high DPI scaling on Windows causing window save/restore issues
- Fixed QRZ return paths not displaying

### Fixed


### Removed


[unreleased]: 