@@ -24,6 +24,8 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
 - Added JTDX installation search if WSJT-X installation not found
 - Disabled high DPI scaling on Windows causing window save/restore issues
 - Fixed QRZ return paths not displaying
+- Ctrl-Y Toggles Offline Mode
+- Windows update now shows a dialog when updating
 
 ### Fixed
 
